Fix horizontal scrolling on page

--- a/_embed/templates/theme-default/stylesheet/01-layout.css
+++ b/_embed/templates/theme-default/stylesheet/01-layout.css
@@ -13,6 +13,8 @@ body {
 	color: var(--text-color);
 	margin:0px;
 	min-height:100dvh;
+	overflow-x:hidden;
+	overscroll-behavior: none;
 }
 
 nav {
